--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <div class="name">
             <label for="name">Name</label>
         <input id="name" type="text" placeholder="Enter your name">
+        <small class="error-name"></small>
         </div>
         <div class="email">
             <label for="name">Email</label>
 
             <input id="email" type="email" placeholder="Enter your Email">
+            <small class="error-email"></small>
             </div>
             <div class="submit">
                
